Second commit - Paul
Changed footer

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </main>
     </div>
     <footer>
-      <p class="copy">&copy; Alex Devero Design 2014</p>
+      <p class="copy">&copy; STM ScavengerHhunt Spring 2019</p>
     </footer>
     <div class="line"></div>
 
