--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
       <header role="banner">
         <nav role="navigation">
-          <h1><a href="#">Asperion</a></h1>
+          <h1><a href="#">STM Spring 2019</a></h1>
           <ul class="nav-ul">
             <li><a href="#">Home</a></li>
             <li><a href="#">Schedule</a></li>
