Fifth commit - Paul
Added the collaborators and schedule

--- a/collaborators.html
+++ b/collaborators.html
@@ -42,9 +42,21 @@
   <body>
     <div class="container-fluid" id="background-cl">
 
-
-
-
+      <div class="container">
+        <div class="collaborators-st">
+          <div>
+            <h1>Collaborators</h1>
+          </div>
+          <br>
+        <ul>
+          <li> <h2>Juhi Rahman</h2> </li>
+          <li> <h2>Breana Narine</h2> </li>
+          <li> <h2>Arjina Khanom</h2> </li>
+          <li> <h2>Thin Thazin</h2> </li>
+          <li> <h2>Paul Alarcon</h2> </li>
+        </ul>
+        </div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
