--- a/schedule.html
+++ b/schedule.html
@@ -49,78 +49,86 @@
         <table class="table table-bordered table-hover">
           <thead>
             <tr>
-              <th scope="col" style="text-align: center">Time</th>
-              <th scope="col">Monday</th>
-              <th scope="col">Tuesday</th>
-              <th scope="col">Wednesday</th>
-              <th scope="col">Thursday</th>
-              <th scope="col">Friday</th>
+              <th scope="col" style="text-align: center">TIME</th>
+              <th scope="col">MONDAY</th>
+              <th scope="col">TUESDAY</th>
+              <th scope="col">WEDNESDAY</th>
+              <th scope="col">THURSDAY</th>
+              <th scope="col">FRIDAY</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <th scope="row" style="text-align: center">9:15-10:30</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <th scope="row" style="text-align: center">9:15-10:15</th>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
             </tr>
             <tr>
-              <th scope="row" style="text-align: center">10:30-11:45</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <th scope="row" style="text-align: center">10:30-11:30</th>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
             </tr>
             <tr>
-              <th scope="row" style="text-align: center">11:45-01:00</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <th scope="row" style="text-align: center">11:45-12:45</th>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
             </tr>
             <tr>
-              <th scope="row" style="text-align: center">02:15-03:30</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <th scope="row" style="text-align: center">1:00-2:00</th>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
             </tr>
             <tr>
-              <th scope="row" style="text-align: center">03:30-04:45</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <th scope="row" style="text-align: center">2:15-3:15</th>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
             </tr>
             <tr>
-              <th scope="row" style="text-align: center">04:45-06:00</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <th scope="row" style="text-align: center">3:25-4:25</th>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
             </tr>
             <tr>
-              <th scope="row" style="text-align: center">06:00-07:15</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <th scope="row" style="text-align: center">4:35-5:35</th>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
             </tr>
             <tr>
-              <th scope="row" style="text-align: center">07:15-08:30</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <th scope="row" style="text-align: center">5:45-6:45</th>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
+            </tr>
+			 <tr>
+              <th scope="row" style="text-align: center">6:55-7:55</th>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <td style="text-align: center"><font color="blue">OPEN</font></td>
             </tr>
           </tbody>
           </table>
@@ -131,17 +139,17 @@
           <table class="table table-bordered table-hover">
             <thead>
               <tr>
-                <th scope="col" style="text-align: center">Time</th>
-                <th scope="col">Monday</th>
-                <th scope="col">Tuesday</th>
-                <th scope="col">Wednesday</th>
-                <th scope="col">Thursday</th>
-                <th scope="col">Friday</th>
+                <th scope="col" style="text-align: center">TIME</th>
+                <th scope="col">MONDAY</th>
+                <th scope="col">TUESDAY</th>
+                <th scope="col">WEDNESDAY</th>
+                <th scope="col">THURSDAY</th>
+                <th scope="col">FRIDAY</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <th scope="row" style="text-align: center">9:15-10:30</th>
+                <th scope="row" style="text-align: center">9:15-10:15</th>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -149,55 +157,63 @@
                 <td></td>
               </tr>
               <tr>
-                <th scope="row" style="text-align: center">10:30-11:45</th>
+                <th scope="row" style="text-align: center">10:30-11:30</th>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td></td>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="row" style="text-align: center">11:45-12:45</th>
+                <td></td>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="row" style="text-align: center">1:00-2:00</th>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
                 <td></td>
                 <td></td>
+              </tr>
+              <tr>
+                <th scope="row" style="text-align: center">2:15-3:15</th>
+                <td></td>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="row" style="text-align: center">3:25-4:25</th>
+                <td></td>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td></td>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="row" style="text-align: center">4:35-5:35</th>
+                <td></td>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <th scope="row" style="text-align: center">11:45-01:00</th>
+                <th scope="row" style="text-align: center">5:45-6:45</th>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row" style="text-align: center">02:15-03:30</th>
-                <td></td>
-                <td></td>
+                <td style="text-align: center"><font color="red">CLASS</font></td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
-              <tr>
-                <th scope="row" style="text-align: center">03:30-04:45</th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row" style="text-align: center">04:45-06:00</th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row" style="text-align: center">06:00-07:15</th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row" style="text-align: center">07:15-08:30</th>
+			  <tr>
+                <th scope="row" style="text-align: center">6:55-7:55</th>
                 <td></td>
                 <td></td>
                 <td></td>
