--- a/collaborators.html
+++ b/collaborators.html
@@ -45,15 +45,15 @@
       <div class="container">
         <div class="collaborators-st">
           <div>
-            <h1>Collaborators</h1>
+            <h1 style="color:red;">Collaborators</h1>
           </div>
           <br>
         <ul>
-          <li> <h2>Juhi Rahman</h2> </li>
-          <li> <h2>Breana Narine</h2> </li>
+          <li> <h2>Breana Narine </h2> </li>
           <li> <h2>Arjina Khanom</h2> </li>
           <li> <h2>Thin Thazin</h2> </li>
           <li> <h2>Paul Alarcon</h2> </li>
+		  <li> <h2>Juhi Rahman</h2> </li>
         </ul>
         </div>
       </div>
