--- a/index.html
+++ b/index.html
@@ -47,27 +47,35 @@
             <div class="col-sm-3">
                 <div class="card">
                     <div class="card-block">
-                        <h4 class="card-title">B121</h4>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h4 class="card-title">e-Portfolio Labs</h4>
+                        <p class="card-text">Location: B121, B123, MB57, C447</p>
+						<p class="card-text">These labs are technology labs where students can get e-Portfolio as well as all kinds of technology help. </p>
+						<p class="card-text">Websites:</p>
+                        <p class="card-text"><small class="text-muted">Websites: </small></p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="card">
                     <div class="card-block">
-                        <h4 class="card-title">B123</h4>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h4 class="card-title">Libray Media Lab</h4>
+                        <p class="card-text">Location: E201 </p>
+						<p class="card-text">Office Hours:Monday – Thursday | 7:30 AM – 9:45 PM<br>
+                                   Friday | 7:30 AM – 8:45 PM<br>
+                                   Saturday | 9:00 AM – 4:45 PM<br>
+                                   Sunday | 12:00 PM – 4:45 PM </p>
+						<p class="card-text">Phone:(718) 482-5431</p>
+                        <p class="card-text"><small class="text-muted">Website:<a href= https://library.laguardia.edu/services/media/>https://library.laguardia.edu/services/media/ </a></small></p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="card">
                     <div class="card-block">
-                        <h4 class="card-title">E201</h4>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h4 class="card-title">ASAP</h4>
+                        <p class="card-text"> Location:BA22 </p>
+						<p class="card-text"> Email: ASAP@lagcc.cuny.edu </p>
+                        <p class="card-text"><small class="text-muted">Website:<a href=https://www.laguardia.edu/ASAP/ >https://www.laguardia.edu/ASAP/ </a></small></p>
                     </div>
                 </div>
             </div>
@@ -78,7 +86,7 @@
                         <h4 class="card-title">Single Stop Program </h4>
                         <p class="card-text">Location: C107 </p>
 						<p class="card-text">Office Hours:<br>Monday & Wednesday<br> 9:00am to 1:00pm</p>
-                        <p class="card-text"><small class="text-muted">Phone:(718)482-5135</small></p>
+                        <p class="card-text"><small class="text-muted">Phone:718-482-5135</small></p>
                         <p class="card-text"><small class="text-muted">Email: singlestop@lagcc.cuny.edu</small></p>
 						<p class="card-text"><small class="text-muted">Website: <a href= https://www.laguardia.edu/singlestop/ >https://www.laguardia.edu/singlestop/ </a></small> </p>
 					</div>
@@ -89,53 +97,67 @@
                 <div class="card">
                     <div class="card-block">
                         <h4 class="card-title">Career Center</h4>
-                        <p class="card-text"></p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+						<p class="card-title">Location: B114 </p>
+						<p class="card-title">Office Hours: Mon & Thur 9:00 to 7:00 <br>Tue, Wed & Fri 9:00 to 5:00  </p>
+                        <p class="card-text">Phone:718-486-5235 </p>
+						<p class="card-text">Email: career@lagcc.cuny.edu </p>
+                        <p class="card-text"><small class="text-muted">Website:<a href= https://www.laguardia.edu/careerservices/>https://www.laguardia.edu/careerservices/ </a></small></p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="card">
                     <div class="card-block">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h4 class="card-title">Student clubs and organization </h4>
+                        <p class="card-text"> Location: M115</p>
+						<p class="card-text"> Office Hours: Monday–Thursday: 9 a.m.–7 p.m. <br>Friday: 9 a.m.–5 p.m.</p>
+                        <p class="card-text"><small class="text-muted">Website:<a href =https://www.laguardia.edu/student-clubs/>https://www.laguardia.edu/student-clubs/</a></small></p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="card">
                     <div class="card-block">
-                        <h4 class="card-title">Card title another</h4>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h4 class="card-title">Office of Student with Disabilities</h4>
+                        <p class="card-text">Location: M102</p>
+						<p class="card-text">Phone: 718-482-5279 </p>
+                        <p class="card-text"><small class="text-muted">Email: OSD@lagcc.cuny.edu </small></p>
+						<p class="card-text"><small class="text-muted">Website:<a href = https://www.laguardia.edu/osd/ >https://www.laguardia.edu/osd/ </a></small></p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="card">
                     <div class="card-block">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h4 class="card-title">CUNY Edge (AKA) COPE</h4>
+                        <p class="card-text">Location: MB13</p>
+						<p class="card-text">Phone: 718-482-5479</p>
+                        <p class="card-text"><small class="text-muted">Website:<a href= https://www.laguardia.edu/Academics/CUNY-EDGE/ >https://www.laguardia.edu/Academics/CUNY-EDGE/ </a></small></p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="card">
                     <div class="card-block">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h4 class="card-title">Financial Aid Office</h4>
+                        <p class="card-text">Location:C107</p>
+						<p class="card-text">Office Hours:Monday & Thursday: 9 a.m.- 7 p.m. <br>Tuesday & Wednesday: 9 a.m.- 5 p.m. <br>Friday: 10 a.m.–3 p.m.<br> 
+                         Saturday & Sunday: Closed</p>
+						 <p class="card-text">Phone: 718-482-7218 </p>
+						 <p class="card-text">Email: financialaid@lagcc.cuny.edu</p>
+						 <p class="card-text">Location: C107</p>
+                        <p class="card-text"><small class="text-muted">Website:<a href= https://www.laguardia.edu/PayingforCollege/ > https://www.laguardia.edu/PayingforCollege/ </a></small></p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="card">
                     <div class="card-block">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h4 class="card-title">Health Services Center</h4>
+                        <p class="card-text">Location: MB57</p>
+                        <p class="card-text"><small class="text-muted">Phone: 718-482-5280 </small></p>
+						<p class="card-text"><small class="text-muted">Email: Health-Center@lagcc.cuny.edu  </small></p>
+						<p class="card-text"><small class="text-muted">Website: <a href= https://www.laguardia.edu/healthservices/> https://www.laguardia.edu/healthservices/</a></small></p>
                     </div>
                 </div>
             </div>
